--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <br>
       <footer class="footer">
          <div class="container">
-            <span class="copyright"><a style="text-decoration: none; color: #9C9AB3;" href="https://t.me/ZauteKm">© 2021 ALBINPRAVEEN</a></span>
+            <span class="copyright"><a style="text-decoration: none; color: #9C9AB3;" href="https://albinpraveen.ml/portfolio">© 2021 ALBINPRAVEEN</a></span>
          </div>
       </footer>
       <script src="web-content/js/home.js"></script>
